added new publications

--- a/index.html
+++ b/index.html
@@ -514,7 +514,7 @@
             <tr>
               <td class="panel-heading" role="tab" id="heading11">  
                 Leite, J. M. R., <Strong>Ribeiro, A. H.</Strong>, Pereira, J. L., de Souza, C. A., Heider, D., ... & Sarti, F. M. (2024). Missense genetic variants in major bitter taste receptors are associated with diet quality and food intake in a highly admixed underrepresented population. 
-                <i> Clinical Nutrition ESPEN. </i> <a href= "https://doi.org/10.1016/j.clnesp.2024.06.045" target="_blank">(Link)</a></td>
+                <i> Clinical Nutrition ESPEN. </i> <a href= "https://doi.org/10.1016/j.clnesp.2024.06.045" target="_blank">https://doi.org/10.1016/j.clnesp.2024.06.045</a></td>
               <td><a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" data-target="#collapse11" aria-expanded="false" aria-controls="collapse11"></a></td>
             </tr> 
           </table>
