--- a/index.html
+++ b/index.html
@@ -459,12 +459,12 @@
         <div class="panel panel-default">
           <table style="width:100%">
             <tr>
-              <td class="panel-heading" role="tab" id="heading11">  
-              da Silva, T., Silva, E., Góis, A., Heider, D., Kaski, S. and Mesquita, D., <Strong>Ribeiro, A. H.</Strong> (2024). Human-in-the-Loop Causal Discovery under Latent Confounding using Ancestral GFlowNets. <i> arXiv preprint arXiv:2309.12032 </i> <a href="https://arxiv.org/abs/2309.12032" target="_blank">(Link)</a></td>
-              <td><a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" data-target="#collapse11" aria-expanded="false" aria-controls="collapse11"></a></td>
+              <td class="panel-heading" role="tab" id="heading14">  
+              da Silva, T., Silva, E., Góis, A., Heider, D., Kaski, S. and Mesquita, D., <Strong>Ribeiro, A. H.</Strong> (2024). Human-in-the-Loop Causal Discovery under Latent Confounding using Ancestral GFlowNets. <i> arXiv preprint arXiv:2309.12032. </i> <a href="https://arxiv.org/abs/2309.12032" target="_blank">(Link)</a></td>
+              <td><a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" data-target="#collapse14" aria-expanded="false" aria-controls="collapse14"></a></td>
             </tr> 
           </table>
-          <div id="collapse11" class="panel-collapse collapse" role="tabpanel" aria-labelledby="heading11">
+          <div id="collapse11" class="panel-collapse collapse" role="tabpanel" aria-labelledby="heading14">
               <div class="panel-body">
                 Structure learning is the crux of causal inference. Notably, causal discovery (CD) algorithms are brittle when data is scarce, possibly inferring imprecise causal relations that contradict expert knowledge -- especially when considering latent confounders. To aggravate the issue, most CD methods do not provide uncertainty estimates, making it hard for users to interpret results and improve the inference process. Surprisingly, while CD is a human-centered affair, no works have focused on building methods that both 1) output uncertainty estimates that can be verified by experts and 2) interact with those experts to iteratively refine CD. To solve these issues, we start by proposing to sample (causal) ancestral graphs proportionally to a belief distribution based on a score function, such as the Bayesian information criterion (BIC), using generative flow networks. Then, we leverage the diversity in candidate graphs and introduce an optimal experimental design to iteratively probe the expert about the relations among variables, effectively reducing the uncertainty of our belief over ancestral graphs. Finally, we update our samples to incorporate human feedback via importance sampling. Importantly, our method does not require causal sufficiency (i.e., unobserved confounders may exist). Experiments with synthetic observational data show that our method can accurately sample from distributions over ancestral graphs and that we can greatly improve inference quality with human aid.            </div>
             </div>
@@ -473,13 +473,13 @@
         <div class="panel panel-default">
           <table style="width:100%">
             <tr>
-              <td class="panel-heading" role="tab" id="heading11">  
+              <td class="panel-heading" role="tab" id="heading13">  
                 da Silva, T., Silva, E., Góis, A., Heider, D., Kaski, S. and Mesquita, D., <Strong>Ribeiro, A. H.</Strong> (2024). Human-Aided Discovery of Ancestral Graphs. 
-                <i> LXAI Workshop at Neural Information Processing Systems (NeurIPS 2024) </i> <a href="https://openreview.net/pdf?id=PVOpWUJORs" target="_blank">(Link)</a></td>
-              <td><a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" data-target="#collapse11" aria-expanded="false" aria-controls="collapse11"></a></td>
+                <i> LXAI Workshop at Neural Information Processing Systems (NeurIPS 2024). </i> <a href="https://openreview.net/pdf?id=PVOpWUJORs" target="_blank">(Link)</a></td>
+              <td><a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" data-target="#collapse13" aria-expanded="false" aria-controls="collapse13"></a></td>
             </tr> 
           </table>
-          <div id="collapse11" class="panel-collapse collapse" role="tabpanel" aria-labelledby="heading11">
+          <div id="collapse13" class="panel-collapse collapse" role="tabpanel" aria-labelledby="heading13">
               <div class="panel-body">
                 In data-scarce situations, causal discovery (CD) algorithms often produce unreliable causal relationships that may 
                 conflict with expert knowledge, especially in the presence of latent confounders. 
@@ -496,13 +496,13 @@
         <div class="panel panel-default">
           <table style="width:100%">
             <tr>
-              <td class="panel-heading" role="tab" id="heading11">  
+              <td class="panel-heading" role="tab" id="heading12">  
                 <Strong>Ribeiro, A. H.</Strong>, Crnkovic, M., Pereira, J. L., Fisberg, R. M., Sarti, F. M., Rogero, M. M., Heider, D., and Cerqueira, A. (2024). AnchorFCI: Harnessing Genetic Anchors for Enhanced Causal Discovery of Cardiometabolic Disease Pathways. <i> Frontiers in Genetics. </i> 
                 15:1436947. DOI: 10.3389/fgene.2024.1436947. <a href="https://www.frontiersin.org/journals/genetics/articles/10.3389/fgene.2024.1436947/abstract" target="_blank">(Link)</a></td>
-              <td><a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" data-target="#collapse11" aria-expanded="false" aria-controls="collapse11"></a></td>
+              <td><a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" data-target="#collapse12" aria-expanded="false" aria-controls="collapse12"></a></td>
             </tr> 
           </table>
-          <div id="collapse11" class="panel-collapse collapse" role="tabpanel" aria-labelledby="heading11">
+          <div id="collapse12" class="panel-collapse collapse" role="tabpanel" aria-labelledby="heading12">
               <div class="panel-body">
                 Cardiometabolic diseases, a leading global health concern, arise from a complex interplay of lifestyle choices, genetic predispositions, and biochemical markers. Although extensive research has uncovered strong associations among various risk factors and these diseases, grasping their causal relationships is vital for gaining deeper mechanistic insights and designing effective prevention and intervention strategies. We address this gap by introducing anchorFCI, a novel adaptation of the conservative Really Fast Causal Inference (RFCI) algorithm designed to enhance the discovery of causal relationships by strategically selecting and integrating reliable anchor variables from an additional set known not to be caused by the variables of interest. This approach is particularly well-suited for learning causal networks involving phenotypic, clinical, and sociodemographic factors, leveraging genetic variables recognized as not being influenced by these factors. By integrating these anchor variables along with knowledge of their non-ancestral relationships, anchorFCI effectively handles latent confounding while enhancing both robustness and discovery power. We demonstrate its effectiveness using data from the 2015 ISA-Nutrition study in São Paulo, Brazil, and further estimate the effect sizes of the uncovered causal relationships with state-of-the-art tools from Judea Pearl's framework, presenting a fully data-driven causal inference pipeline. The results not only support many established causal relationships but also elucidate their interconnections within a complex network, enhancing our understanding of the broader dynamics and the multifaceted nature of cardiometabolic risk.</div>
             </div>
@@ -548,7 +548,7 @@
           <tr>
             <td class="panel-heading" role="tab" id="heading9">  
 
-	    Tajabadi, M, Grabenhenrich, L., <Strong>Ribeiro, A. H.</Strong>, Leyer, M., Heider D. (2023). Sharing Data With Shared Benefits: Artificial Intelligence Perspective. <i> J Med Internet Res 2023;25:e47540 </i> <a href="https://www.jmir.org/2023/1/e47540" target="_blank">(Link)</a></td>
+	    Tajabadi, M, Grabenhenrich, L., <Strong>Ribeiro, A. H.</Strong>, Leyer, M., Heider D. (2023). Sharing Data With Shared Benefits: Artificial Intelligence Perspective. <i> J Med Internet Res 2023;25:e47540. </i> <a href="https://www.jmir.org/2023/1/e47540" target="_blank">(Link)</a></td>
           <td><a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" data-target="#collapse9" aria-expanded="false" aria-controls="collapse9"></a></td>
           </tr> 
         </table>
