added new poster presentations

--- a/index.html
+++ b/index.html
@@ -854,7 +854,7 @@ Suppose we identify G-causality between the graph models' parameters. In that ca
         <div class="panel panel-default">
           <table style="width:100%">
             <tr>
-              <td class="panel-heading" role="tab" id="headingConf5">
+              <td class="panel-heading" role="tab" id="headingConf8">
                 da Silva, T., Silva, E., Góis, A., Heider, D., Kaski, S. and Mesquita, D.*, <Strong>Ribeiro, A. H.</Strong> (2024). 
                 Human-Aided Discovery of Ancestral Graphs.<i> LXAI Workshop at NeurIPS 2024 </i>, Vancouver Convention Centre, Vancouver, British Columbia, Canada. 
                  <a href="assets/pdf/posterLXAIatNeurIPS2024.pdf" download target="_blank">(Poster Presentation)</a> </td>
@@ -870,9 +870,9 @@ Suppose we identify G-causality between the graph models' parameters. In that ca
         <div class="panel panel-default">
           <table style="width:100%">
             <tr>
-              <td class="panel-heading" role="tab" id="headingConf5">
+              <td class="panel-heading" role="tab" id="headingConf7">
                 <Strong>Ribeiro, A. H.</Strong>, Fehse, L., Winter, N., Welzel, M., Kircher, T., Thanarajah, S. E., Dannlowski, U., Heider, D., Hahn, T. (2024).
-                 Uncovering Gut Microbiota's Causal Role in Major Depressive Disorder. <i> 13th Sino-German Frontiers of Science Symposium (SINOGFOS), </i>, Shanghai, China. Supported by the Chinese Academy of Sciences and Humboldt Foundation.
+                 Uncovering Gut Microbiota's Causal Role in Major Depressive Disorder. <i> 13th Sino-German Frontiers of Science Symposium (SINOGFOS)</i>, Shanghai, China. Supported by the Chinese Academy of Sciences and Humboldt Foundation.
                  <a href="assets/pdf/posterSINOGFOS2024.pdf" download target="_blank">(Poster Presentation)</a> </td>
               <td><a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordionConf" data-target="#collapseConf7" aria-expanded="false" aria-controls="collapseConf7"></a></td>
             </tr> 
@@ -888,14 +888,16 @@ Suppose we identify G-causality between the graph models' parameters. In that ca
         <div class="panel panel-default">
           <table style="width:100%">
             <tr>
-              <td class="panel-heading" role="tab" id="headingConf5"> Levshina, N., <Strong>Ribeiro, A. H.</Strong> (2023). Who did What to Whom: Measuring and explaining cross-linguistic differences. <i>10th International Contrastive Linguistics Conference,</i> Mannheim, Germany. July, 2023. <a href="https://iclc10.ids-mannheim.de/abstracts/ICLC_2023_Book_of_Abstracts_pre.pdf" download target="_blank">(Conference Abstract)</a> </td>
+              <td class="panel-heading" role="tab" id="headingConf6"> Levshina, N., <Strong>Ribeiro, A. H.</Strong> (2023). Who did What to Whom: Measuring and explaining cross-linguistic differences. 
+                <i>10th International Contrastive Linguistics Conference</i> <a href="https://easychair.org/smart-program/ICLC-10/2023-07-19.html" download target="_blank">(ICLC-10)</a> 
+                 Mannheim, Germany. July, 2023.
+                 <a href="assets/pdf/abstractICLC10.pdf" download target="_blank">(Conference Abstract)</a> </td>
               <td><a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordionConf" data-target="#collapseConf6" aria-expanded="false" aria-controls="collapseConf6"></a></td>
             </tr> 
           </table>
           <div id="collapseConf6" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingConf6">
-              <div class="panel-body">
-                
-              </div>
+              <div class="panel-body">             
+            </div>
             </div>
         </div>
        
