updated poster presentations

--- a/index.html
+++ b/index.html
@@ -862,7 +862,11 @@ Suppose we identify G-causality between the graph models' parameters. In that ca
             </tr> 
           </table>
           <div id="collapseConf8" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingConf8">
-              <div class="panel-body">          
+              <div class="panel-body">      
+                We introduce Ancestral GFlowNets (AGFNs) as a new amortized inference method for sampling from a belief distribution on the space of ancestral graphs. 
+                We develop the first human-in-the-loop framework for ancestral causal discovery (CD). 
+                We design an optimal strategy for elicitation of an expert's feedback regarding the nature of a specific causal relationship among the observed variables,
+                We demonstrate that our human-aided CD method drastically outperforms traditional CD algorithms after just a few expert interactions.    
               </div>
             </div>
         </div>
@@ -878,7 +882,12 @@ Suppose we identify G-causality between the graph models' parameters. In that ca
             </tr> 
           </table>
           <div id="collapseConf7" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingConf7">
-              <div class="panel-body">          
+              <div class="panel-body">     
+                Major Depressive Disorder (MDD) is a multifaceted mental health condition. Despite numerous studies highlighting a significant association between MDD and the gut microbiome, 
+                it remains unclear whether these associations play a causal role in MDD development. In this study, we conducted a differential abundance
+                analysis (DAA) followed by a causal analysis of the DFG FOR2107 dataset (https://for2107.de/), which includes 1,269 patients.   
+                We highlight two important contributions: (1) Through a meticulous application of the FCI algorithm, we identified that Eggerthella and Hungatella causally contribute to MDD, while Coprobacilius indirectly causes MDD via Eggerthella.
+                (2) Obesity not only affects MDD but also confounds between taxa variables and MDD. Using effect identification tools, we show the interventional probability of MDD increases with the abundance of Eggerthella and Hungatella.  
               </div>
             </div>
         </div>
