--- a/index.html
+++ b/index.html
@@ -1333,15 +1333,15 @@ carbonatação e a maturação. Considerando os resultados preliminares obtidos 
     
       <table class="table-borderless" style="width:100%">
         <tr>
-          <td style="vertical-align:top"> Oct 2023 - Feb 2024 </td>
+          <td style="vertical-align:top"> Oct 2023 - Sep 2024 </td>
           <td> Department of Computer Science, Heinrich Heine University of Düsseldorf, Germany<br>
-            <i>Causality.</i>
+            <i>Courses: Causality, Topics in Causality. </i>
           </td>
         </tr>    
       <tr>
         <td style="vertical-align:top"> Mar 2023 - Oct 2023 </td>
         <td> Department of Mathematics and Computer Science, Phillips University of Marburg, Germany<br>
-          <i>Causal Data Science: Theoretical Foundations and Algorithms.</i>
+          <i>Course: Causal Data Science: Theoretical Foundations and Algorithms.</i>
         </td>
       </tr>         
     </table>
@@ -1355,7 +1355,7 @@ carbonatação e a maturação. Considerando os resultados preliminares obtidos 
           <tr>
             <td style="vertical-align:top"> Feb 2018 - Jul 2018 </td>
             <td> Computer Engineering Department - Institute of Education and Research (Insper), Sao Paulo, SP, Brazil.<br>
-              <i>Software Design using Python</i>
+              <i>Course: Software Design using Python</i>
             </td>
           </tr>         
         </table>
