--- a/index.html
+++ b/index.html
@@ -1051,7 +1051,6 @@ carbonatação e a maturação. Considerando os resultados preliminares obtidos 
         <tr>
           <td style="vertical-align:top"> Aug 2023 </td>
           <td> <a target="_blank" href="https://emap.fgv.br/en/event/recent-advances-causal-inference-under-limited-domain-knowledge/"> Seminar at FGV EMAp  </a> <br>
-            Invited Talk <br>
             School of Applied Mathematics of Getulio Vargas Foundation (FGV EMAp), Rio de Janeiro, Brazil. <br>
             <i> <strong>Ribeiro, A. H.</strong> Recent Advances in Causal Inference under Limited Domain Knowledge. </i>
           </td>
@@ -1060,7 +1059,6 @@ carbonatação e a maturação. Considerando os resultados preliminares obtidos 
         <tr>
           <td style="vertical-align:top"> Apr 2023 </td>
           <td> <a target="_blank" href="https://crl-tuebingen-2023.github.io/speakers/"> Workshop on Causal Representation Learning </a>  <br>
-            Invited Talk <br>
             Max Planck Institute for Intelligent Systems, Tübingen, Germany <br>
             <i> <strong>Ribeiro, A. H.</strong>. Effect Identification in Cluster Causal Diagrams.</i>
           </td>
@@ -1069,7 +1067,6 @@ carbonatação e a maturação. Considerando os resultados preliminares obtidos 
         <tr>
           <td style="vertical-align:top"> Aug 2022 </td>
           <td> DAAD Postdoc-NeT-AI Tour, Germany <br>
-            Invited Talks <br>
             Institute of Information Systems &amp;  Institute for Medical Biometrics and Statistics at the University of Lübeck; <br>
             Institute for Computational Systems Biology at the University of Hamburg;<br>
             Centre for Cognitive Science at TU Darmstadt;<br>
@@ -1082,7 +1079,6 @@ carbonatação e a maturação. Considerando os resultados preliminares obtidos 
         <tr>
           <td style="vertical-align:top"> Aug 2022 </td>
           <td> <a target="_blank" href="https://twitter.com/Heiderlab/status/1562079688725614592?t=YzRaRbeaDXMn9LFjBFKSfQ&s=08"> Future Bioinformatics Workshop, Germany </a> <br>
-            Invited Talk <br>
             <i> <strong>Ribeiro, A. H.</strong>. Causal AI: Towards Explainable, Generalizable, and Trustworthy Decision-Making. </i>
           </td>
         </tr> 
@@ -1091,7 +1087,6 @@ carbonatação e a maturação. Considerando os resultados preliminares obtidos 
             <td style="vertical-align:top"> Jun 2022</td>
             <td> Columbia DSI Scholars - Summer Research Bootcamp 2022<br>
               Data Science Institute, Columbia University <br>
-              Invited Talk<br>
               <i> <strong>Ribeiro, A. H.</strong> An Overview on Causal Data Science.</i>
             </td>
           </tr> 
@@ -1100,7 +1095,6 @@ carbonatação e a maturação. Considerando os resultados preliminares obtidos 
             <td style="vertical-align:top"> May 2022</td>
             <td>  <a target="_blank" href="https://www.pipges.ufscar.br/seminars/may-27-2022-causal-effect-identification-in-partially-understood-domains-speaker-adele-h-ribeiro-columbia-university">     Interinstitutional Graduate Program in Statistics (PIPGES)</a> <br>
               Federal University of São Carlos and  University of São Paulo <br>
-              Invited Talk<br>
               <i> <strong>Ribeiro, A. H.</strong> <a href="https://www.youtube.com/watch?v=Hmk0OTtgzms" download target="_blank">Causal Effect Identification in Partially Understood Domains.              </a></i>
             </td>
           </tr> 
@@ -1109,16 +1103,14 @@ carbonatação e a maturação. Considerando os resultados preliminares obtidos 
             <td style="vertical-align:top"> Mar 2022</td>
             <td>  <a target="_blank" href="https://www.voices-of-data-science.com/"> Voices of Data Science at UMass Amherst</a> <br>
               Manning College of Information & Computer Sciences, University of Massachusetts Amherst<br>
-              Invited Talk<br>
               <i> <strong>Ribeiro, A. H.</strong>. On the Importance of Causal Inference in the Next Generation of Artificial Intelligence.</a></i>
             </td>
           </tr> 
 
           <tr>
             <td style="vertical-align:top"> Mar 2022</td>
-            <td>  Causal Inference Learning Group <br>
+            <td>  Causal Inference Learning Group (CILG) <br>
               Biostatistics Department, Mailman School of Public Health, Columbia University <br>
-              Invited Talk<br>
               <i> <strong>Ribeiro, A. H.</strong>.Effect Identification in Cluster Causal Diagrams.</a></i>
             </td>
           </tr> 
@@ -1126,7 +1118,6 @@ carbonatação e a maturação. Considerando os resultados preliminares obtidos 
           <tr>
             <td style="vertical-align:top"> Dec 2021</td>
             <td>  WHY-21 at NeurIPS 2021 - <a target="_blank" href="https://why21.causalai.net/"> Causal Inference &amp; Machine Learning: Why now? </a> <br>
-              Invited Talk<br>
               <i> <strong>Ribeiro, A. H.</strong>. <a href="https://neurips.cc/virtual/2021/workshop/21871" download target="_blank">Effect Identification in Cluster Causal Diagrams.</a></i>
             </td>
           </tr> 
@@ -1134,7 +1125,6 @@ carbonatação e a maturação. Considerando os resultados preliminares obtidos 
             <tr>
             <td style="vertical-align:top"> Nov 2021</td>
             <td> Laboratory of Epidemiology &amp; Population Science (LEPS) at the National Institute on Aging (NIA) <br>
-              Invited Talk <br>
               <i> <strong>Ribeiro, A. H.</strong>. Causal Inference and the Data-Fusion Problem </i>
             </td>
           </tr> 
@@ -1142,7 +1132,6 @@ carbonatação e a maturação. Considerando os resultados preliminares obtidos 
           <tr>
             <td style="vertical-align:top"> Nov 2021</td>
             <td> <a target="_blank" href="https://www.oecd.org/sti/inno/aiandtheproductivityofscience-speakers.htm"> OECD workshop on AI and the productivity of science. </a> <br>
-              Invited Talk <br>
               <i> <strong>Ribeiro, A. H.</strong>, Bareinboim, E.. <a href="https://www.youtube.com/watch?v=mGbX28TZvw0&t=13954s" download target="_blank">Developing causal AI: its importance and an overview.</a></i>
             </td>
           </tr> 
