updated talks section

--- a/index.html
+++ b/index.html
@@ -1136,6 +1136,15 @@ carbonatação e a maturação. Considerando os resultados preliminares obtidos 
             </td>
           </tr> 
 
+          <tr>
+            <td style="vertical-align:top"> May 2019 </td>
+            <td>  Graduate Seminars Series - Statistics<br>
+              Federal University of Sao Carlos and University of Sao Paulo (UFSCar - USP), Sao Carlos, SP, Brazil<br>
+              Invited Talk <br>
+              <i> <strong>Ribeiro, A. H.</strong>. Learning Genetic and Environmental Probabilistic Graphical Models from Gaussian Family Data. </i>
+            </td>
+          </tr> 
+
         </table>
     </div>
  
@@ -1292,16 +1301,7 @@ carbonatação e a maturação. Considerando os resultados preliminares obtidos 
                 Invited Lecture <br>
                 <i> <strong>Ribeiro, A. H.</strong>. Causal Inference from Observational Studies </i>
               </td>
-            </tr> 
-            
-            <tr>
-              <td style="vertical-align:top"> May 2019 </td>
-              <td>  Graduate Seminars Series - Statistics<br>
-                Federal University of Sao Carlos and University of Sao Paulo (UFSCar - USP), Sao Carlos, SP, Brazil<br>
-                Invited Lecture <br>
-                <i> <strong>Ribeiro, A. H.</strong>. Learning Genetic and Environmental Probabilistic Graphical Models from Gaussian Family Data. </i>
-              </td>
-            </tr> 
+            </tr>         
   
             <tr>
               <td style="vertical-align:top"> Jan 2017 </td>
