updated talks section

--- a/index.html
+++ b/index.html
@@ -1048,6 +1048,39 @@ carbonatação e a maturação. Considerando os resultados preliminares obtidos 
     <div class="list-info wow fadeInUp">
       
       <table class="table-borderless" style="width:100%">
+
+          <tr>
+            <td style="vertical-align:top"> Dec 2024 </td>
+            <td> L3S Research Center, Leibniz University, and CAIMed <br>
+              L3S Research Center, Leibniz University, and Lower Saxony research Center for Artificial Intelligence and Causal Methods in Medicine (CAIMed), Hannover, Germany<br>
+              <i> <strong>Ribeiro, A. H.</strong> From Theory to Practice: Advancing Causal Inference for Real-World Applications in Health Sciences. </i>
+            </td>
+          </tr> 
+
+          <tr>
+            <td style="vertical-align:top"> Oct 2024 </td>
+            <td> Seminar at Université Grenoble Alpes <br>
+              Institut d'Informatique et Mathématiques Appliquées de Grenoble (IMAG), France<br>
+              <i> <strong>Ribeiro, A. H.</strong> Recent Advances in Causal Inference under Limited Domain Knowledge. </i>
+            </td>
+          </tr> 
+
+          <tr>
+            <td style="vertical-align:top"> Jun 2024 </td>
+            <td> <a target="_blank" href="https://mathcal.ma.tum.de/mc/showtalks?filter=0&id=2304">TUM Seminar on Statistics and Data Science</a> <br>
+              Department of Mathematics, Technical University of Munich (TUM), Germany <br>
+              <i> <strong>Ribeiro, A. H.</strong> Recent Advances in Causal Inference under Limited Domain Knowledge </i>
+            </td>
+          </tr> 
+
+          <tr>
+            <td style="vertical-align:top"> May 2024 </td>
+            <td> <a target="_blank" href="https://68rbras.com.br/miniconferencias/"> 68th Annual Meeting of RBras</a> <br>
+              Brazilian Region of the International Biometrics Society (RBras), ESALQ/USP, in Piracicaba, SP, Brazil <br>
+              <i> <strong>Ribeiro, A. H.</strong> From Observations to Causality: Recent Advances and Ongoing Challenges </i>
+            </td>
+          </tr> 
+
         <tr>
           <td style="vertical-align:top"> Aug 2023 </td>
           <td> <a target="_blank" href="https://emap.fgv.br/en/event/recent-advances-causal-inference-under-limited-domain-knowledge/"> Seminar at FGV EMAp  </a> <br>
