updated talks section - Youtube links

--- a/index.html
+++ b/index.html
@@ -655,7 +655,9 @@ Third, we prove the proposed calculus to be complete for the same task.
         <div class="panel panel-default">
         <table style="width:100%">
           <tr>
-            <td class="panel-heading" role="tab" id="heading5"><Strong>Ribeiro, A. H.</Strong>, Bareinboim, E. (2022). Causal Inference and Data Fusion: Towards an Accelerated Process of Scientific Discovery.<i> OECD-22. Organisation for Economic Co-operation and Development, Volume “AI and the productivity of science” </i> <a href="https://causalai.net/r73.pdf" target="_blank"> (Link) </td>
+            <td class="panel-heading" role="tab" id="heading5"><Strong>Ribeiro, A. H.</Strong>, Bareinboim, E. (2022). Causal Inference and Data Fusion: Towards an Accelerated Process of Scientific Discovery.<i> 
+              <a href="https://youtu.be/mGbX28TZvw0?feature=shared" download target="_blank"> (Talk on Youtube) </a> 
+              OECD-22. Organisation for Economic Co-operation and Development, Volume “AI and the productivity of science” </i> <a href="https://causalai.net/r73.pdf" target="_blank"> (Link) </td>
           </tr> 
         </table>
        </div>
@@ -1126,9 +1128,10 @@ carbonatação e a maturação. Considerando os resultados preliminares obtidos 
 
           <tr>
             <td style="vertical-align:top"> May 2022</td>
-            <td>  <a target="_blank" href="https://www.pipges.ufscar.br/seminars/may-27-2022-causal-effect-identification-in-partially-understood-domains-speaker-adele-h-ribeiro-columbia-university">     Interinstitutional Graduate Program in Statistics (PIPGES)</a> <br>
+            <td>  <a target="_blank" href="https://www.pipges.ufscar.br/seminars/may-27-2022-causal-effect-identification-in-partially-understood-domains-speaker-adele-h-ribeiro-columbia-university"> Interinstitutional Graduate Program in Statistics (PIPGES)</a> <br>
               Federal University of São Carlos and  University of São Paulo <br>
-              <i> <strong>Ribeiro, A. H.</strong> <a href="https://www.youtube.com/watch?v=Hmk0OTtgzms" download target="_blank">Causal Effect Identification in Partially Understood Domains.              </a></i>
+              <i> <strong>Ribeiro, A. H.</strong> Causal Effect Identification in Partially Understood Domains.</i>
+              <a href="https://youtu.be/Hmk0OTtgzms?feature=shared" download target="_blank"> (Talk on Youtube) </a>
             </td>
           </tr> 
 
@@ -1136,7 +1139,8 @@ carbonatação e a maturação. Considerando os resultados preliminares obtidos 
             <td style="vertical-align:top"> Mar 2022</td>
             <td>  <a target="_blank" href="https://www.voices-of-data-science.com/"> Voices of Data Science at UMass Amherst</a> <br>
               Manning College of Information & Computer Sciences, University of Massachusetts Amherst<br>
-              <i> <strong>Ribeiro, A. H.</strong>. On the Importance of Causal Inference in the Next Generation of Artificial Intelligence.</a></i>
+              <i> <strong>Ribeiro, A. H.</strong>. On the Importance of Causal Inference in the Next Generation of Artificial Intelligence.</i>
+              <a href="https://youtu.be/s61549EBmjc?feature=shared" download target="_blank"> (Talk on Youtube) </a>  
             </td>
           </tr> 
 
@@ -1235,25 +1239,27 @@ carbonatação e a maturação. Considerando os resultados preliminares obtidos 
               5-day Course <br>
               Department of Informatics and Telecommunications National and Kapodistrian University of Athens, Athens, Greece. <br>
                <strong>Ribeiro, A. H.</strong>, Dhami, D., and Zecevic, M. <i> Machines Climbing Pearl's Ladder of Causation. </i>
+               <a href="https://youtube.com/playlist?list=PLIxSri8f3YTWzjobCzBcyRlrE5C81gITH&feature=shared" download target="_blank"> (Lectures on Youtube) </a>  
             </td>
           </tr> 
 
           <tr>
             <td style="vertical-align:top"> Jul 2024 </td>
-            <td> <a target="_blank" href="http://lxmls.it.pt/2024/">14th Lisbon Machine Learning School (LxMLS)</a>  <br>
+            <td> <a target="_blank" href="http://lxmls.it.pt/2024/">14th Lisbon Machine Learning School - LxMLS 2024 </a>  <br>
               3-hour Tutorial <br>
               Instituto Superior Técnico, Lisbon, Portugal <br>
               <strong>Ribeiro, A. H.</strong>.<i>  Introduction to Causal Inference. </i> 
-              <a target="_blank" href="https://www.youtube.com/watch?v=wx36E8ItZRE"> (Video on Youtube). </a><br>
+              <a href="https://www.youtube.com/live/wx36E8ItZRE?feature=shared" download target="_blank"> (Lecture on Youtube) </a><br>
             </td>
           </tr> 
 
           <tr>
             <td style="vertical-align:top"> Jun 2024 </td>
-            <td> <a target="_blank" href="https://probabilistic.ai/">6th  Probabilistic AI School - ProbAI 2024</a>  <br>
+            <td> <a target="_blank" href="https://probabilistic.ai/">Nordic Probabilistic AI School - ProbAI 2024</a>  <br>
               3-hour Tutorial <br>
              Frederiksberg Campus of University of Copenhagen, Copenhagen, Denmark <br>
               <strong>Ribeiro, A. H.</strong>. <i> Introduction to Causal Inference. </i> 
+              <a href="https://youtu.be/iXhAXF1133A?feature=shared" download target="_blank"> (Lecture on Youtube) </a> 
             </td>
           </tr> 
 
@@ -1282,7 +1288,8 @@ carbonatação e a maturação. Considerando os resultados preliminares obtidos 
             <td> <a target="_blank" href="https://www.youtube.com/watch?v=VA8vzmfnhyk"> 13rd Lisbon Machine Learning School - LxMLS 2023</a>  <br>
               3-hour Tutorial <br>
               Instituto Superior Técnico, Lisbon, Portugal <br>
-              <strong>Ribeiro, A. H.</strong>. <i> Causality and its Role in Reasoning, Explainability, and Generalizability. </i>
+              <strong>Ribeiro, A. H.</strong>. <i> Causality and its Role in Reasoning, Explainability, and Generalizability.  
+                <a href="https://www.youtube.com/live/VA8vzmfnhyk?feature=shared" download target="_blank"> (Lecture on Youtube) </a> </i>
             </td>
           </tr> 
   
@@ -1293,6 +1300,7 @@ carbonatação e a maturação. Considerando os resultados preliminares obtidos 
               Norwegian University of Science and Technology (NTNU), Trondheim, Norway <br>
               <a target="_blank" href="https://github.com/probabilisticai/probai-2023/tree/main/day_5"> Tutorial on GitHub. </a><br>
               <strong>Ribeiro, A. H.</strong>. <i> Causal Inference: Towards Explainable, Generalizable, and Trustworthy AI. </i>
+              <a href="https://youtu.be/NkTtwHEMeEg?feature=shared" download target="_blank"> (Lecture on Youtube) </a>
             </td>
           </tr> 
   
@@ -1310,7 +1318,7 @@ carbonatação e a maturação. Considerando os resultados preliminares obtidos 
               <td style="vertical-align:top"> Jul 2022 </td>
               <td> <a target="_blank" href="http://lxmls.it.pt/2022/index.html#schedule"> 12th Lisbon Machine Learning Summer School (LxMLS - 2022) </a> <br>
                 Invited 3-hour Tutorial <br>
-                <strong>Ribeiro, A. H.</strong>, Bareinboim, E.. <i> Causal Data Science </i>
+                <strong>Ribeiro, A. H.</strong>, Bareinboim, E.. <i> Causal Data Science <a href="https://www.youtube.com/live/r6t8oaWIge4?feature=shared" download target="_blank"> (Lecture on Youtube) </a></i>
               </td>
             </tr> 
   
@@ -1327,7 +1335,7 @@ carbonatação e a maturação. Considerando os resultados preliminares obtidos 
               <td style="vertical-align:top"> Jul 2021 </td>
               <td> 11th Lisbon Machine Learning Summer School (LxMLS - 2021)<br>
                 Invited 3-hour Tutorial <br>
-                <strong>Ribeiro, A. H.</strong>, Bareinboim, E..<i> <a href="https://youtu.be/2zkQjhMiZq4?list=PLQl_xdhSmQegzsLin54NbfePFAuTUEmUj&t=31" download target="_blank">Causal Data Science: An Introduction to Causal Inference and Data-Fusion.</a></i>
+                <strong>Ribeiro, A. H.</strong>, Bareinboim, E..<i> Causal Data Science: An Introduction to Causal Inference and Data-Fusion. <a href="https://www.youtube.com/live/2zkQjhMiZq4?feature=shared" download target="_blank"> (Lecture on Youtube) </a></i>
               </td>
             </tr> 
             
@@ -1399,7 +1407,7 @@ carbonatação e a maturação. Considerando os resultados preliminares obtidos 
         <tr>
           <td style="vertical-align:top"> Oct 2023 - Sep 2024 </td>
           <td> Department of Computer Science, Heinrich Heine University of Düsseldorf, Germany<br>
-            <i>Courses: Causality, Topics in Causality. </i>
+            <i>Courses: Causal Data Science  <a href="https://youtube.com/playlist?list=PLIxSri8f3YTXfOQg1-3IbM_OpqDoahDCt&feature=shared" target="_blank">(Course on Youtube)</a>; Topics in Causality. </i>
           </td>
         </tr>    
       <tr>
