updated talks section - Youtube links

--- a/index.html
+++ b/index.html
@@ -656,7 +656,6 @@ Third, we prove the proposed calculus to be complete for the same task.
         <table style="width:100%">
           <tr>
             <td class="panel-heading" role="tab" id="heading5"><Strong>Ribeiro, A. H.</Strong>, Bareinboim, E. (2022). Causal Inference and Data Fusion: Towards an Accelerated Process of Scientific Discovery.<i> 
-              <a href="https://youtu.be/mGbX28TZvw0?feature=shared" download target="_blank"> (Talk on Youtube) </a> 
               OECD-22. Organisation for Economic Co-operation and Development, Volume “AI and the productivity of science” </i> <a href="https://causalai.net/r73.pdf" target="_blank"> (Link) </td>
           </tr> 
         </table>
@@ -1169,7 +1168,8 @@ carbonatação e a maturação. Considerando os resultados preliminares obtidos 
           <tr>
             <td style="vertical-align:top"> Nov 2021</td>
             <td> <a target="_blank" href="https://www.oecd.org/sti/inno/aiandtheproductivityofscience-speakers.htm"> OECD workshop on AI and the productivity of science. </a> <br>
-              <i> <strong>Ribeiro, A. H.</strong>, Bareinboim, E.. <a href="https://www.youtube.com/watch?v=mGbX28TZvw0&t=13954s" download target="_blank">Developing causal AI: its importance and an overview.</a></i>
+              <i> <strong>Ribeiro, A. H.</strong>, Bareinboim, E.. Developing causal AI: its importance and an overview. </i>
+              <a href="https://www.youtube.com/watch?v=mGbX28TZvw0&t=13954s" download target="_blank"> (Talk on Youtube) </a>
             </td>
           </tr> 
 
