adding medrxiv paper

--- a/index.html
+++ b/index.html
@@ -461,6 +461,32 @@
           <table style="width:100%">
             <tr>
               <td class="panel-heading" role="tab" id="heading14">  
+                Fehse L.*, <Strong>Ribeiro, A. H.*</Strong>, Winter, N. R., Thanarajah, S.E., … , Heider, D., Hahn, T. (2024). From Gut to Brain: Evidence for a Causal Contribution of Gut-Microbiota to Major Depressive Disorder in Humans.
+                <i>MedRxiv preprint</i>. doi: 10.1101/2024.12.05.24318549. <a href="https://www.medrxiv.org/content/10.1101/2024.12.05.24318549v1.full-text" target="_blank">(Link)</a></td>
+              <td><a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" data-target="#collapse14" aria-expanded="false" aria-controls="collapse14"></a></td>
+            </tr> 
+          </table>
+          <div id="collapse14" class="panel-collapse collapse" role="tabpanel" aria-labelledby="heading14">
+              <div class="panel-body">
+                Major Depressive Disorder (MDD) is a highly prevalent, severe mental health condition that constitutes one of the leading causes of disability worldwide.
+                While recent animal studies suggest a causal role of the gut microbiome in the pathophysiology of MDD models, evidence in humans is still unclear due to
+                 small sample sizes, inconsistent clinical assessment of MDD diagnosis, and methodological limitations regarding causal inference in cross-sectional data. 
+                 Here, we explicitly address these shortcomings to investigate the potential causal link between the gut microbiome and MDD: 
+                 First, we replicate previous findings using one of the largest multicenter MDD cohorts for which microbiome data and in-depth diagnostic assessment are available
+                  (N=1,269 MDD patients and controls). We find a significant difference between healthy controls and MDD patients for the relative abundance of the four taxa
+                   Eggerthella, Hungatella, Coprobacillus, and Lachnospiraceae FCS020. Second, we employ state-of-the-art, fully data-driven causal inference tools within
+                    Judea Pearl’s framework, allowing us to derive model constraints from the data rather than relying on potentially strong, unrealistic assumptions. 
+                    Using this approach, we found data-driven evidence for Eggerthella and Hungatella as causal contributors to MDD. Furthermore, we show that Eggerthella and 
+                    Hungatella abundances are associated with MDD beyond the influence of body mass index, identifying two distinct pathways linking MDD to the gut microbiome. 
+                    Finally, the difference in relative abundance of these taxa between healthy and MDD patients was independent of antidepressant medication. 
+                Our study provides the first evidence for a potential causal role of gut-microbiota in the pathophysiology of depression in humans.           
+               </div>
+          </div>
+          
+        <div class="panel panel-default">
+          <table style="width:100%">
+            <tr>
+              <td class="panel-heading" role="tab" id="heading14">  
               da Silva, T., Silva, E., Góis, A., Heider, D., Kaski, S. and Mesquita, D., <Strong>Ribeiro, A. H.</Strong> (2024). Human-in-the-Loop Causal Discovery under Latent Confounding using Ancestral GFlowNets. <i> arXiv preprint arXiv:2309.12032. </i> <a href="https://arxiv.org/abs/2309.12032" target="_blank">(Link)</a></td>
               <td><a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" data-target="#collapse14" aria-expanded="false" aria-controls="collapse14"></a></td>
             </tr> 
